syntax = "proto3";

option go_package = "./pb";

message Move {
  double x = 1;
  double y = 2;
}

message Vector {
  double dx = 1;
  double dy = 2;
}

message SetPosition {
  Vector position = 1;
}

message Connect {}

message AddPlayer {}

message RemovePlayer {}

message KeyDown {}

message KeyUp {}

message ClientEvent {
  string id = 1;
  oneof event {
    Connect connect = 2;
    Move move = 3;
    KeyDown key_down = 4;
    KeyUp key_up = 5;
  }
}

message ServerEvent {
  string id = 1;
  oneof event {
    Move move = 2;
    AddPlayer add_player = 3;
    RemovePlayer remove_player = 4;
    KeyDown key_down = 5;
    KeyUp key_up = 6;
    SetPosition set_position = 7;
  }
}
